--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_interactions
-	base = b1732b6
-	trimbase = 
+	base = 3009388
+	trimbase = b1732b6
 	parent = upstream
 	previous = 61aca45
