--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_master_info
-	base = 1ca4e61
-	trimbase = 
+	base = 68e3dec
+	trimbase = 1ca4e61
 	parent = upstream
 	previous = 61aca45
