--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_tools
-	base = 83de28a
-	trimbase = 
+	base = 38b777f
+	trimbase = 83de28a
 	parent = upstream
 	previous = 61aca45
