--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_python_redis
-	base = fda72a3
-	trimbase = 
+	base = bd3e8f3
+	trimbase = fda72a3
 	parent = upstream
 	previous = 61aca45
