--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_python_wifi
-	base = f836eea
-	trimbase = 
+	base = 262739f
+	trimbase = f836eea
 	parent = upstream
 	previous = 61aca45
