--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_semantic_version
 	base = e1c9780
-	trimbase = 77426cc
+	trimbase = 
 	parent = upstream
 	previous = c78d206
