--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_semantic_version
-	base = 8d7421c
-	trimbase = 
+	base = ab81cdb
+	trimbase = 8d7421c
 	parent = upstream
 	previous = 61aca45
