--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_ebnf
-	base = d5fdebe
-	trimbase = 
+	base = 0a913dd
+	trimbase = d5fdebe
 	parent = upstream
 	previous = 61aca45
