--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_launch
-	base = 4ccce0b
-	trimbase = 
+	base = 52be419
+	trimbase = 4ccce0b
 	parent = upstream
 	previous = 61aca45
