--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_python_utils
-	base = 5d0dc9d
-	trimbase = 
+	base = a1254dc
+	trimbase = 5d0dc9d
 	parent = upstream
 	previous = 61aca45
