--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_bubble_icons
-	base = 3fdc8c5
-	trimbase = 
+	base = 4ab9e77
+	trimbase = 3fdc8c5
 	parent = upstream
 	previous = 61aca45
