--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_python_comms
-	base = 02f4541
-	trimbase = 
+	base = 24f852c
+	trimbase = 02f4541
 	parent = upstream
 	previous = 61aca45
