--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_console
-	base = 45b7b30
-	trimbase = 
+	base = 3f69e40
+	trimbase = 45b7b30
 	parent = upstream
 	previous = 61aca45
