--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_uri
-	base = c6a51e1
-	trimbase = 
+	base = 933df94
+	trimbase = c6a51e1
 	parent = upstream
 	previous = 61aca45
