--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_icons
-	base = 6f6621a
-	trimbase = 
+	base = ab745e9
+	trimbase = 6f6621a
 	parent = upstream
 	previous = 61aca45
