--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c158d17
+	base = 0dd4345
 	trimbase = 
 	parent = rpm/indigo/rocon_bubble_icons
-	previous = 
+	previous = c158d17
