--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.1.10-0": ["Fri Nov 21 2014", "Daniel Stonier", "d.stonier@gmail.com"], "0.1.9-0": ["Mon Aug 25 2014", "Daniel Stonier", "d.stonier@gmail.com"], "0.1.11-0": ["Tue Dec 02 2014", "Daniel Stonier", "d.stonier@gmail.com"]}
+{"0.1.10-0": ["Fri Nov 21 2014", "Daniel Stonier", "d.stonier@gmail.com"], "0.1.9-0": ["Mon Aug 25 2014", "Daniel Stonier", "d.stonier@gmail.com"], "0.1.12-0": ["Thu Jan 08 2015", "Daniel Stonier", "d.stonier@gmail.com"], "0.1.11-0": ["Tue Dec 02 2014", "Daniel Stonier", "d.stonier@gmail.com"]}
