--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2fc81d0
+	base = 7079cd8
 	trimbase = 
 	parent = rpm/indigo/rocon_master_info
-	previous = 
+	previous = 2fc81d0
