--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d2214ae
+	base = d7bf2df
 	trimbase = 
 	parent = rpm/indigo/rocon_interactions
-	previous = 
+	previous = d2214ae
