--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d5b9b3b
+	base = dffa251
 	trimbase = 
 	parent = rpm/indigo/rocon_python_comms
-	previous = 
+	previous = d5b9b3b
