--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a93bce3
+	base = 9fd56b0
 	trimbase = 
 	parent = rpm/indigo/rocon_ebnf
-	previous = 
+	previous = a93bce3
