--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a787b5d
+	base = f327407
 	trimbase = 
 	parent = rpm/indigo/rocon_uri
-	previous = 
+	previous = a787b5d
