--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 823239f
+	base = d4ad233
 	trimbase = 
 	parent = rpm/indigo/rocon_icons
-	previous = 
+	previous = 823239f
