--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4786549
+	base = 829dd67
 	trimbase = 
 	parent = rpm/indigo/rocon_tools
-	previous = 
+	previous = 4786549
