--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a078bc6
+	base = f756728
 	trimbase = 
 	parent = rpm/indigo/rocon_python_redis
-	previous = 
+	previous = a078bc6
