--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3ac0edd
+	base = 57f07e9
 	trimbase = 
 	parent = rpm/indigo/rocon_launch
-	previous = 
+	previous = 3ac0edd
