--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a1b772a
+	base = 74aa22b
 	trimbase = 
 	parent = rpm/indigo/rocon_console
-	previous = 
+	previous = a1b772a
