--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = be95122
+	base = cca9af2
 	trimbase = 
 	parent = rpm/indigo/rocon_semantic_version
-	previous = 
+	previous = be95122
