--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2c170c8
+	base = af97f1a
 	trimbase = 
 	parent = rpm/indigo/rocon_python_utils
-	previous = 
+	previous = 2c170c8
