--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 22f0939
+	base = e024d10
 	trimbase = 
 	parent = rpm/indigo/rocon_python_wifi
-	previous = 
+	previous = 22f0939
