--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_interactions
-	base = bff7b62
-	trimbase = 
+	base = 11fd776
+	trimbase = bff7b62
 	parent = upstream
 	previous = 2e07ca5
