--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_master_info
-	base = 9c0768f
-	trimbase = 
+	base = 23dc1f4
+	trimbase = 9c0768f
 	parent = upstream
 	previous = 2e07ca5
