--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_tools
-	base = 3925f9b
-	trimbase = 
+	base = 1fff4e3
+	trimbase = 3925f9b
 	parent = upstream
 	previous = 2e07ca5
