--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_python_redis
-	base = 0880b4e
-	trimbase = 
+	base = d134d1e
+	trimbase = 0880b4e
 	parent = upstream
 	previous = 2e07ca5
