--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_semantic_version
-	base = 55d1999
-	trimbase = 
+	base = 050a6ac
+	trimbase = 55d1999
 	parent = upstream
 	previous = 2e07ca5
