--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_ebnf
-	base = 899a43b
-	trimbase = 
+	base = 1d3f365
+	trimbase = 899a43b
 	parent = upstream
 	previous = 2e07ca5
