--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_launch
-	base = 0783bdf
-	trimbase = 
+	base = 90a9371
+	trimbase = 0783bdf
 	parent = upstream
 	previous = 2e07ca5
