--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_python_utils
-	base = 4be1912
-	trimbase = 
+	base = 723512b
+	trimbase = 4be1912
 	parent = upstream
 	previous = 2e07ca5
