--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_bubble_icons
-	base = a043202
-	trimbase = 
+	base = f9bde00
+	trimbase = a043202
 	parent = upstream
 	previous = 2e07ca5
