--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_python_comms
-	base = 39c536c
-	trimbase = 
+	base = e9c3b6b
+	trimbase = 39c536c
 	parent = upstream
 	previous = 2e07ca5
