--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_console
-	base = 87bc429
-	trimbase = 
+	base = 09e05b1
+	trimbase = 87bc429
 	parent = upstream
 	previous = 2e07ca5
