--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_icons
-	base = ae6b472
-	trimbase = 
+	base = 5cc5033
+	trimbase = ae6b472
 	parent = upstream
 	previous = 2e07ca5
