--- a/src/rocon_uri/rules/rules.yaml
+++ b/src/rocon_uri/rules/rules.yaml
@@ -44,7 +44,8 @@
     - fedora
     - gentoo
     - opensuse
-    - mint
+    - mint:
+      - rebecca
     - ubuntu:
       - precise
       - quantal
