--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_interactions
-	base = 2e12c50
-	trimbase = 
+	base = 63cdf4e
+	trimbase = 2e12c50
 	parent = upstream
 	previous = dfc06a0
