--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_master_info
-	base = 187d4c5
-	trimbase = 
+	base = 85d259b
+	trimbase = 187d4c5
 	parent = upstream
 	previous = dfc06a0
