--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_tools
-	base = 6191046
-	trimbase = 
+	base = 63d3cfc
+	trimbase = 6191046
 	parent = upstream
 	previous = dfc06a0
