--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_python_redis
-	base = aea5667
-	trimbase = 
+	base = 8ba505e
+	trimbase = aea5667
 	parent = upstream
 	previous = dfc06a0
