--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_python_wifi
-	base = f0f34c7
-	trimbase = 
+	base = dc6c2df
+	trimbase = f0f34c7
 	parent = upstream
 	previous = dfc06a0
