--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_semantic_version
-	base = fbeeb4f
-	trimbase = 
+	base = 3935861
+	trimbase = fbeeb4f
 	parent = upstream
 	previous = dfc06a0
