--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_ebnf
-	base = 9d83485
-	trimbase = 
+	base = a6de2b1
+	trimbase = 9d83485
 	parent = upstream
 	previous = dfc06a0
