--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_launch
-	base = b42f253
-	trimbase = 
+	base = a63a167
+	trimbase = b42f253
 	parent = upstream
 	previous = dfc06a0
