--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_python_utils
-	base = 93029a3
-	trimbase = 
+	base = 7efec10
+	trimbase = 93029a3
 	parent = upstream
 	previous = dfc06a0
