--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_bubble_icons
-	base = 36f824a
-	trimbase = 
+	base = b48037b
+	trimbase = 36f824a
 	parent = upstream
 	previous = dfc06a0
