--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_python_comms
-	base = 6948828
-	trimbase = 
+	base = cb84137
+	trimbase = 6948828
 	parent = upstream
 	previous = dfc06a0
