--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_console
-	base = 9e662a5
-	trimbase = 
+	base = 5ae1c3f
+	trimbase = 9e662a5
 	parent = upstream
 	previous = dfc06a0
