--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_uri
-	base = 404eee8
-	trimbase = 
+	base = 0dbe42b
+	trimbase = 404eee8
 	parent = upstream
 	previous = dfc06a0
