--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_icons
-	base = b7395c4
-	trimbase = 
+	base = 3fc0a47
+	trimbase = b7395c4
 	parent = upstream
 	previous = dfc06a0
