--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.1.13-0": ["Mon Jan 12 2015", "Daniel Stonier", "d.stonier@gmail.com"], "0.1.12-0": ["Thu Jan 08 2015", "Daniel Stonier", "d.stonier@gmail.com"]}
+{"0.1.13-0": ["Mon Jan 12 2015", "Daniel Stonier", "d.stonier@gmail.com"], "0.1.12-0": ["Thu Jan 08 2015", "Daniel Stonier", "d.stonier@gmail.com"], "0.1.14-0": ["Mon Feb 09 2015", "Daniel Stonier", "d.stonier@gmail.com"]}
