--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_interactions
-	base = 9caa5d9
-	trimbase = 
+	base = 6cad02e
+	trimbase = 9caa5d9
 	parent = upstream
 	previous = 1df8909
