--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_master_info
-	base = 550b77b
-	trimbase = 
+	base = 457cbf8
+	trimbase = 550b77b
 	parent = upstream
 	previous = 1df8909
