--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_tools
-	base = b3bf361
-	trimbase = 
+	base = 67fcc44
+	trimbase = b3bf361
 	parent = upstream
 	previous = 1df8909
