--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_python_redis
-	base = 0055966
-	trimbase = 
+	base = 6138fb3
+	trimbase = 0055966
 	parent = upstream
 	previous = 1df8909
