--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_python_wifi
-	base = b70f966
-	trimbase = 
+	base = b683b48
+	trimbase = b70f966
 	parent = upstream
 	previous = 1df8909
