--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_semantic_version
-	base = 0551678
-	trimbase = 
+	base = 9c151a6
+	trimbase = 0551678
 	parent = upstream
 	previous = 1df8909
