--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_ebnf
-	base = c119d31
-	trimbase = 
+	base = a3a004b
+	trimbase = c119d31
 	parent = upstream
 	previous = 1df8909
