--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_launch
-	base = 21ba371
-	trimbase = 
+	base = c4b9e79
+	trimbase = 21ba371
 	parent = upstream
 	previous = 1df8909
