--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_python_utils
-	base = cefc14f
-	trimbase = 
+	base = 072f27d
+	trimbase = cefc14f
 	parent = upstream
 	previous = 1df8909
