--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_bubble_icons
-	base = 484f34b
-	trimbase = 
+	base = 264ff92
+	trimbase = 484f34b
 	parent = upstream
 	previous = 1df8909
