--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_python_comms
-	base = 02ed776
-	trimbase = 
+	base = 432f5ec
+	trimbase = 02ed776
 	parent = upstream
 	previous = 1df8909
