--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_console
-	base = b5c8e9c
-	trimbase = 
+	base = 1eb2e81
+	trimbase = b5c8e9c
 	parent = upstream
 	previous = 1df8909
