--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_uri
-	base = e8f2ba5
-	trimbase = 
+	base = 1f0047b
+	trimbase = e8f2ba5
 	parent = upstream
 	previous = 1df8909
