--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_icons
-	base = 1790667
-	trimbase = 
+	base = e158018
+	trimbase = 1790667
 	parent = upstream
 	previous = 1df8909
