--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_interactions
-	base = 3755a3a
-	trimbase = 
+	base = f29c68d
+	trimbase = 3755a3a
 	parent = upstream
 	previous = b37c7f8
