--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_master_info
-	base = 29c861d
-	trimbase = 
+	base = 2289afe
+	trimbase = 29c861d
 	parent = upstream
 	previous = b37c7f8
