--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_tools
-	base = c900fa3
-	trimbase = 
+	base = 2ea0f2b
+	trimbase = c900fa3
 	parent = upstream
 	previous = b37c7f8
