--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_python_wifi
-	base = 71e0387
-	trimbase = 
+	base = 9e78537
+	trimbase = 71e0387
 	parent = upstream
 	previous = b37c7f8
