--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_semantic_version
-	base = f14c247
-	trimbase = 
+	base = 2632853
+	trimbase = f14c247
 	parent = upstream
 	previous = b37c7f8
