--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_ebnf
-	base = f6f31a4
-	trimbase = 
+	base = ca02de4
+	trimbase = f6f31a4
 	parent = upstream
 	previous = b37c7f8
