--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_launch
-	base = c33ae98
-	trimbase = 
+	base = 0278131
+	trimbase = c33ae98
 	parent = upstream
 	previous = b37c7f8
