--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_python_utils
-	base = 5cdff7f
-	trimbase = 
+	base = 1180955
+	trimbase = 5cdff7f
 	parent = upstream
 	previous = b37c7f8
