--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_bubble_icons
-	base = 8ed3593
-	trimbase = 
+	base = d5a27dd
+	trimbase = 8ed3593
 	parent = upstream
 	previous = b37c7f8
