--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_python_comms
-	base = 325904b
-	trimbase = 
+	base = e23b63b
+	trimbase = 325904b
 	parent = upstream
 	previous = b37c7f8
