--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_console
-	base = dfe6d34
-	trimbase = 
+	base = 353d104
+	trimbase = dfe6d34
 	parent = upstream
 	previous = b37c7f8
