--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_uri
-	base = dcdfaf1
-	trimbase = 
+	base = ea605cc
+	trimbase = dcdfaf1
 	parent = upstream
 	previous = b37c7f8
