--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_icons
-	base = 7adb93c
-	trimbase = 
+	base = d0fbc25
+	trimbase = 7adb93c
 	parent = upstream
 	previous = b37c7f8
