--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_interactions
-	base = 8aa6369
-	trimbase = 
+	base = b05c367
+	trimbase = 8aa6369
 	parent = upstream
 	previous = 659936a
