--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_master_info
-	base = 26127f0
-	trimbase = 
+	base = 5b8976c
+	trimbase = 26127f0
 	parent = upstream
 	previous = 659936a
