--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_tools
-	base = f78ce5c
-	trimbase = 
+	base = a2c8f08
+	trimbase = f78ce5c
 	parent = upstream
 	previous = 659936a
