--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_python_wifi
-	base = 7ab07d1
-	trimbase = 
+	base = 598f0e3
+	trimbase = 7ab07d1
 	parent = upstream
 	previous = 659936a
