--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_semantic_version
-	base = 8b61cb5
-	trimbase = 
+	base = 096cbb5
+	trimbase = 8b61cb5
 	parent = upstream
 	previous = 659936a
