--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_semantic_version
 	base = 2632853
-	trimbase = f14c247
+	trimbase = 
 	parent = upstream
 	previous = b37c7f8
