--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_launch
-	base = e5cfb1f
-	trimbase = 
+	base = 8498e38
+	trimbase = e5cfb1f
 	parent = upstream
 	previous = 659936a
