--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_python_utils
-	base = 5aaecf3
-	trimbase = 
+	base = 5469ebb
+	trimbase = 5aaecf3
 	parent = upstream
 	previous = 659936a
