--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_bubble_icons
-	base = a3d9323
-	trimbase = 
+	base = 4671797
+	trimbase = a3d9323
 	parent = upstream
 	previous = 659936a
