--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_python_comms
-	base = 27d5f81
-	trimbase = 
+	base = 21b55af
+	trimbase = 27d5f81
 	parent = upstream
 	previous = 659936a
