--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_console
-	base = adeb308
-	trimbase = 
+	base = 15f132b
+	trimbase = adeb308
 	parent = upstream
 	previous = 659936a
