--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_uri
-	base = 9027f5b
-	trimbase = 
+	base = bbd8b05
+	trimbase = 9027f5b
 	parent = upstream
 	previous = 659936a
