--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_icons
-	base = b2c4c95
-	trimbase = 
+	base = dfe5def
+	trimbase = b2c4c95
 	parent = upstream
 	previous = 659936a
