--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_interactions
-	base = 85efa36
-	trimbase = 
+	base = b5439d6
+	trimbase = 85efa36
 	parent = upstream
 	previous = b370a0f
