--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_master_info
-	base = 6db5e43
-	trimbase = 
+	base = 705e159
+	trimbase = 6db5e43
 	parent = upstream
 	previous = b370a0f
