--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_tools
-	base = 780b301
-	trimbase = 
+	base = bbe9ab8
+	trimbase = 780b301
 	parent = upstream
 	previous = b370a0f
