--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_python_redis
-	base = 4b462c7
-	trimbase = 
+	base = 80bd8df
+	trimbase = 4b462c7
 	parent = upstream
 	previous = b370a0f
