--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_python_wifi
-	base = 6380bed
-	trimbase = 
+	base = 3515a71
+	trimbase = 6380bed
 	parent = upstream
 	previous = b370a0f
