--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_semantic_version
-	base = 608f48e
-	trimbase = 
+	base = f4c50b4
+	trimbase = 608f48e
 	parent = upstream
 	previous = b370a0f
