--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_ebnf
-	base = 368aac0
-	trimbase = 
+	base = b03d85e
+	trimbase = 368aac0
 	parent = upstream
 	previous = b370a0f
