--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_launch
-	base = f8a773d
-	trimbase = 
+	base = 21d3666
+	trimbase = f8a773d
 	parent = upstream
 	previous = b370a0f
