--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_python_utils
-	base = b35ca86
-	trimbase = 
+	base = e495326
+	trimbase = b35ca86
 	parent = upstream
 	previous = b370a0f
