--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_bubble_icons
-	base = b128673
-	trimbase = 
+	base = 971678c
+	trimbase = b128673
 	parent = upstream
 	previous = b370a0f
