--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_python_comms
-	base = 5cb55c1
-	trimbase = 
+	base = a847a3a
+	trimbase = 5cb55c1
 	parent = upstream
 	previous = b370a0f
