--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_console
-	base = 7b1ec0e
-	trimbase = 
+	base = cdbf754
+	trimbase = 7b1ec0e
 	parent = upstream
 	previous = b370a0f
