--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_uri
-	base = 55d658f
-	trimbase = 
+	base = 36b2b10
+	trimbase = 55d658f
 	parent = upstream
 	previous = b370a0f
