--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_icons
-	base = 696dfd4
-	trimbase = 
+	base = bd40cef
+	trimbase = 696dfd4
 	parent = upstream
 	previous = b370a0f
