--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_interactions
-	base = c68bef1
-	trimbase = 
+	base = c68227d
+	trimbase = c68bef1
 	parent = upstream
 	previous = 554dae1
