--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_master_info
-	base = 4603c6b
-	trimbase = 
+	base = 6d1d4cd
+	trimbase = 4603c6b
 	parent = upstream
 	previous = 554dae1
