--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_tools
-	base = bb473db
-	trimbase = 
+	base = 69ccb9b
+	trimbase = bb473db
 	parent = upstream
 	previous = 554dae1
