--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_python_redis
-	base = d122f64
-	trimbase = 
+	base = e6cd52b
+	trimbase = d122f64
 	parent = upstream
 	previous = 554dae1
