--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_python_wifi
-	base = 876ef76
-	trimbase = 
+	base = f2d80ba
+	trimbase = 876ef76
 	parent = upstream
 	previous = 554dae1
