--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_semantic_version
 	base = f4c50b4
-	trimbase = 608f48e
+	trimbase = 
 	parent = upstream
 	previous = b370a0f
