--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_semantic_version
-	base = b909241
-	trimbase = 
+	base = 3e8a910
+	trimbase = b909241
 	parent = upstream
 	previous = 554dae1
