--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_ebnf
-	base = 44d1aa8
-	trimbase = 
+	base = 6c597c4
+	trimbase = 44d1aa8
 	parent = upstream
 	previous = 554dae1
