--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_launch
-	base = a757c11
-	trimbase = 
+	base = 55c0d6b
+	trimbase = a757c11
 	parent = upstream
 	previous = 554dae1
