--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_python_utils
-	base = 25f2935
-	trimbase = 
+	base = 84f1f51
+	trimbase = 25f2935
 	parent = upstream
 	previous = 554dae1
