--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_bubble_icons
-	base = dea8bf4
-	trimbase = 
+	base = fbf5c55
+	trimbase = dea8bf4
 	parent = upstream
 	previous = 554dae1
