--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_python_comms
-	base = ac68abe
-	trimbase = 
+	base = 3a6eafa
+	trimbase = ac68abe
 	parent = upstream
 	previous = 554dae1
