--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_console
-	base = 2dbde49
-	trimbase = 
+	base = 71c41e7
+	trimbase = 2dbde49
 	parent = upstream
 	previous = 554dae1
