--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_uri
-	base = 6cf287d
-	trimbase = 
+	base = 9c5cc7c
+	trimbase = 6cf287d
 	parent = upstream
 	previous = 554dae1
