--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rocon_icons
-	base = 078d9a9
-	trimbase = 
+	base = 3a9f5b2
+	trimbase = 078d9a9
 	parent = upstream
 	previous = 554dae1
